[package]
name = "logo"
version = "1.0.0"
edition = "2021"
authors = ["kualta <contact@kualta.dev>"]
description = "A CLI tool to overlay logos on images with size and position control"
readme = "readme.md"
homepage = "https://github.com/kualta/logo"
repository = "https://github.com/kualta/logo"
license = "MIT"
keywords = ["cli", "image", "logo", "overlay", "watermark"]
categories = ["command-line-utilities", "multimedia::images"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "logo"
path = "src/main.rs"
